work on mobile space issues

--- a/source/assets/stylesheets/pages/_header.scss
+++ b/source/assets/stylesheets/pages/_header.scss
@@ -7,7 +7,7 @@ header, footer {
         // color: #00F7FF;
         color: #F09F2D;
         font-weight: bold;
-        font-size: 2.5em;
+        font-size: 1.75em;
         text-decoration: none;
         letter-spacing: 0.2em;
     }
