--- a/source/assets/stylesheets/pages/_hero.scss
+++ b/source/assets/stylesheets/pages/_hero.scss
@@ -13,6 +13,6 @@
 }
 
 .content p {
-  font-size: 2em;
+  font-size: 1.6em;
   font-family: 'Poppins', arial;
 }
