--- a/source/assets/stylesheets/pages/_index.scss
+++ b/source/assets/stylesheets/pages/_index.scss
@@ -41,7 +41,17 @@ section {
     text-align: center;
 }
 
+@media only screen and (min-width: 500px) {
 
+header .logo {
+    font-size: 2.5em;
+  }
+.content p {
+  font-size: 2em;
+}
+
+
+}
 
 @media only screen and (min-width: 800px) {
 
